fix toc toggle misaligned on iPad

--- a/packages/markdown/src/index.css
+++ b/packages/markdown/src/index.css
@@ -6,6 +6,7 @@
 
 .hyperbook-markdown a {
   color: var(--color-brand);
+  word-break: break-all;
 }
 
 .hyperbook-markdown .copy {
